Experimental changes for "filterlocal" parameter.

--- a/configs/astmanproxy.conf
+++ b/configs/astmanproxy.conf
@@ -80,15 +80,26 @@ outputformat = standard
 ; outputfomat = xml|standard
 ; autofilter = on
 
-; set autofilter to be on or off by default
-; with autofilter on, you can automatically filter responses
+; set autofilter to be 'on' or 'off' by default
+; with autofilter 'on', you can automatically filter responses
 ; to include only messages related to a specific actionid,
 ; as specified in a previous message
-; valid values: on, off
+; 'unique' is an enhanced mechanism for this but does not pass
+; exactly the same ActionID through to Asterisk
+; valid values: on, off, unique
 ; can also be changed on a per-client basis using
 ; ProxyAction: SetAutoFilter
-; AutoFilter: (on|off)
+; AutoFilter: (on|off|unique)
 autofilter = off
+
+; set filterlocal to allow dialling using Channel: Local/xxx
+; where it would normally be filtered.
+; 'off' filters all Local/ calls as normal
+; 'allow' allows all Local/ originate: calls
+; 'allowwith' allows Local/ originate: calls sent as Local/xxx@ocontext
+; 'enforce' will ensure that the channel is sent as Local/xxx@ocontext
+; valid values: off, allow, allowwith, enforce
+filterlocal = off
 
 ; location of logfile -- will be owned by proc_user/proc_group
 ; /opt/log location is good on Mac OS X
