Add missing build dependencies to debian package.
astmanproxy depends on libssl-dev for the SSL part, and, quite
obviously, on build-essential for the C compiler and stuff!

Signed-off-by: Steve Davies <davies147@gmail.com>

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: astmanproxy
 Section: unknown
 Priority: extra
 Maintainer: Steve Davies <steved@ipcortex.co.uk>
-Build-Depends: debhelper (>= 5)
+Build-Depends: build-essential, debhelper (>= 5), libssl-dev
 Standards-Version: 3.7.2
 
 Package: astmanproxy
