--- a/debian/rules
+++ b/debian/rules
@@ -69,7 +69,7 @@ binary-arch: build install
 	dh_testroot
 	dh_installchangelogs 
 	dh_installdocs
-	dh_installexamples astmanproxy.conf
+	dh_installexamples
 #	dh_install
 #	dh_installmenu
 #	dh_installdebconf	
